--- a/iPark/Base.lproj/Main.storyboard
+++ b/iPark/Base.lproj/Main.storyboard
@@ -1027,10 +1027,10 @@ After every 10 points earned you will receive 1 free reservation.*</string>
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nNp-VX-U03">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="911.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="910.5"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hNy-U2-J9a" userLabel="Info View">
-                                                <rect key="frame" x="8" y="8" width="398" height="719.5"/>
+                                                <rect key="frame" x="8" y="8" width="398" height="718.5"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="eLN-Kf-1Vp">
                                                         <rect key="frame" x="30" y="36" width="68" height="68"/>
@@ -1046,19 +1046,19 @@ After every 10 points earned you will receive 1 free reservation.*</string>
                                                         </userDefinedRuntimeAttributes>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Avatar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gb5-xQ-msr">
-                                                        <rect key="frame" x="112" y="60" width="109" height="20"/>
+                                                        <rect key="frame" x="112" y="60" width="112.5" height="20"/>
                                                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="17"/>
                                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change your settings here:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hu-Zg-vdI">
-                                                        <rect key="frame" x="36" y="136" width="332" height="23.5"/>
+                                                        <rect key="frame" x="36" y="136" width="332" height="22.5"/>
                                                         <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="19.299999237060547"/>
                                                         <color key="textColor" red="0.027450980390000001" green="0.0" blue="0.62352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" tag="51" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tz8-5C-IAg" customClass="MDCTextField">
-                                                        <rect key="frame" x="36" y="171.5" width="332" height="90"/>
+                                                        <rect key="frame" x="36" y="170.5" width="332" height="90"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="90" id="xjg-8a-sgV"/>
                                                         </constraints>
@@ -1073,7 +1073,7 @@ After every 10 points earned you will receive 1 free reservation.*</string>
                                                         </connections>
                                                     </textField>
                                                     <textField opaque="NO" tag="52" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NHf-zH-apF" customClass="MDCTextField">
-                                                        <rect key="frame" x="36" y="261.5" width="332" height="90"/>
+                                                        <rect key="frame" x="36" y="260.5" width="332" height="90"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="90" id="bfK-aQ-cah"/>
                                                         </constraints>
@@ -1088,7 +1088,7 @@ After every 10 points earned you will receive 1 free reservation.*</string>
                                                         </connections>
                                                     </textField>
                                                     <textField opaque="NO" tag="53" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HnA-tq-nTf" customClass="MDCTextField">
-                                                        <rect key="frame" x="36" y="351.5" width="332" height="90"/>
+                                                        <rect key="frame" x="36" y="350.5" width="332" height="90"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="90" id="05C-oN-aVR"/>
                                                         </constraints>
@@ -1103,7 +1103,7 @@ After every 10 points earned you will receive 1 free reservation.*</string>
                                                         </connections>
                                                     </textField>
                                                     <textField opaque="NO" tag="54" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7iy-vU-fXk" customClass="MDCTextField">
-                                                        <rect key="frame" x="36" y="441.5" width="332" height="90"/>
+                                                        <rect key="frame" x="36" y="440.5" width="332" height="90"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="90" id="WZG-4N-GPf"/>
                                                         </constraints>
@@ -1118,7 +1118,7 @@ After every 10 points earned you will receive 1 free reservation.*</string>
                                                         </connections>
                                                     </textField>
                                                     <textField opaque="NO" tag="55" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z2A-td-N36" customClass="MDCTextField">
-                                                        <rect key="frame" x="36" y="531.5" width="332" height="90"/>
+                                                        <rect key="frame" x="36" y="530.5" width="332" height="90"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="90" id="Ik7-1z-ktn"/>
                                                         </constraints>
@@ -1133,7 +1133,7 @@ After every 10 points earned you will receive 1 free reservation.*</string>
                                                         </connections>
                                                     </textField>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3gr-f0-FgC" customClass="MDCButton">
-                                                        <rect key="frame" x="36" y="637.5" width="332" height="50"/>
+                                                        <rect key="frame" x="36" y="636.5" width="332" height="50"/>
                                                         <color key="backgroundColor" red="0.98823529409999999" green="0.72941176470000002" blue="0.20784313730000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="50" id="Gbn-Cu-gUE"/>
@@ -1178,10 +1178,10 @@ After every 10 points earned you will receive 1 free reservation.*</string>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nl9-da-Cqq" userLabel="Payment View">
-                                                <rect key="frame" x="8" y="743.5" width="398" height="80"/>
+                                                <rect key="frame" x="8" y="742.5" width="398" height="80"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payment Method" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="91M-W3-TjJ">
-                                                        <rect key="frame" x="40" y="20" width="114" height="18"/>
+                                                        <rect key="frame" x="40" y="20" width="115.5" height="18"/>
                                                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="15"/>
                                                         <color key="textColor" red="0.41568627450000001" green="0.41568627450000001" blue="0.41568627450000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -1194,12 +1194,12 @@ After every 10 points earned you will receive 1 free reservation.*</string>
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AMEX*2014" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BW9-z6-DkI">
-                                                        <rect key="frame" x="76" y="38" width="104" height="22"/>
+                                                        <rect key="frame" x="76" y="38" width="97.5" height="22"/>
                                                         <fontDescription key="fontDescription" name="Lato-Black" family="Lato" pointSize="18.299999237060547"/>
                                                         <color key="textColor" red="0.20392156859999999" green="0.2470588235" blue="0.29411764709999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PsO-Wu-5QP" customClass="FlatButton" customModule="Material">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PsO-Wu-5QP" customClass="MDCButton">
                                                         <rect key="frame" x="0.0" y="0.0" width="398" height="80"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <color key="tintColor" red="0.20392156859999999" green="0.2470588235" blue="0.29411764709999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1226,10 +1226,10 @@ After every 10 points earned you will receive 1 free reservation.*</string>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VK5-F1-GDe">
-                                                <rect key="frame" x="0.0" y="839.5" width="414" height="72"/>
+                                                <rect key="frame" x="0.0" y="838.5" width="414" height="72"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Push Notifications" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sjZ-X1-bPm">
-                                                        <rect key="frame" x="30" y="24" width="161" height="24"/>
+                                                        <rect key="frame" x="30" y="24" width="163" height="24"/>
                                                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="20"/>
                                                         <color key="textColor" red="0.20392156859999999" green="0.2470588235" blue="0.29411764709999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -1292,6 +1292,8 @@ After every 10 points earned you will receive 1 free reservation.*</string>
                     </view>
                     <connections>
                         <outlet property="avatarImageView" destination="eLN-Kf-1Vp" id="axP-XK-6FC"/>
+                        <outlet property="btnPaymentMethod" destination="PsO-Wu-5QP" id="mIg-RT-80B"/>
+                        <outlet property="btnSave" destination="3gr-f0-FgC" id="4CO-Km-OAD"/>
                         <outlet property="emailField" destination="NHf-zH-apF" id="aYF-N7-YwG"/>
                         <outlet property="infoView" destination="hNy-U2-J9a" id="V9e-ur-icc"/>
                         <outlet property="nameField" destination="tz8-5C-IAg" id="G0B-vG-cb4"/>
@@ -3954,6 +3956,7 @@ NOTE: IF YOU INTEND ON ENTERING WITH AN SUV OR OVERSIZED VEHICLE YOU MUST CONTAC
                     </view>
                     <connections>
                         <outlet property="billingInfoView" destination="Vf0-GL-lYG" id="MLB-G5-v2A"/>
+                        <outlet property="btnSave" destination="myM-Xj-mz3" id="KSD-u2-5vE"/>
                         <outlet property="cardInfoView" destination="noi-4k-yth" id="0QO-Xe-HRP"/>
                         <outlet property="cardNumberTextField" destination="0RZ-br-115" id="8TM-F4-LYF"/>
                         <outlet property="cityTextField" destination="P05-2K-i9R" id="dae-tK-xC7"/>
